# doh

./: CREDENTIAL_FIX.md  Cargo.toml  DEBUG_STATUS.md  INSTALL.md  LICENSE  MASTODON_SETUP.md  NOSTR_TROUBLESHOOTING.md  PANEL_COMPLETE.md  PLEB_SIGNER_COMPLETE.md  PLEB_SIGNER_SETUP.md  QUICKSTART.md  README.md  TESTING.md  build_deb.sh  check_pleb_signer.sh  com.sgtapple.doh.desktop  debug_credentials.sh  debug_doh.sh  install.sh  justfile  setup_credentials.py  test.sh  test_nostr_direct.sh
i18n/en/: doh.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  credentials.rs  image_utils.rs  main.rs  post_manager.rs
