[package]
name = "doh"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "Multi-platform social media posting applet for COSMIC desktop"
repository = "https://github.com/sgtapple/doh"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["full"] }

# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# D-Bus for Pleb_Signer
zbus = "4"

# Security & Storage
keyring = "3"
rfd = "0.14"
emojis = "0.6"

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
kamadak-exif = "0.5"

# Platform SDKs (will be added as we implement)
# tweety-rs = "0.1"  # X/Twitter
# bsky-sdk = "0.1"   # BlueSky
nostr = "0.36"
nostr-sdk = "0.36"
oauth1 = "1.0.0"
hmac = "0.12.1"
sha1 = "0.10.6"
sha2 = "0.10"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
